<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#0000" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="823dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-46dp"
        android:layout_marginBottom="-45dp"
        app:srcCompat="@drawable/image01"
        android:contentDescription="@string/todomain01" />

    <Button
        android:id="@+id/button_Car_Make"
        android:layout_width="232dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="106dp"
        android:text="@string/identify_the_car_make" />

    <Button
        android:id="@+id/button_Hints"
        android:layout_width="232dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="211dp"
        android:text="@string/hints" />

    <Button
        android:id="@+id/button_Car_Image"
        android:layout_width="232dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="319dp"
        android:text="@string/identify_the_car_image" />

    <Button
        android:id="@+id/button_Advanced_Level"
        android:layout_width="232dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="426dp"
        android:text="@string/advanced_level" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="547dp"
        android:text="@string/timer"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="UseSwitchCompatOrMaterialXml" />
</RelativeLayout>