<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonIdentifyPage02"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IdentifyTheCarMake"
    android:background="#64d8fe" >


    <ImageView
        android:id="@+id/randImage"
        android:layout_width="374dp"
        android:layout_height="323dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todomake01" />

    <Button
        android:id="@+id/button"
        android:layout_width="236dp"
        android:layout_height="52dp"
        android:onClick="button"
        android:text="@string/identify"
        android:textColor="@color/black"
        app:backgroundTint="#87ceeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonNextMake"
        android:layout_width="236dp"
        android:layout_height="52dp"
        android:textColor="@color/black"
        app:backgroundTint="#87ceeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        tools:ignore="DuplicateIds,MissingConstraints"
        android:visibility="gone"
        android:text="@string/next"
        android:onClick="buttonNextMake" />

    <Spinner
        android:id="@+id/dropDown01"
        android:layout_width="193dp"
        android:layout_height="32dp"
        android:background="#87ceeb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>