<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedLevel"
    android:background="#64d8fe"
    >

    <ImageView
        android:id="@+id/imageViewAdvanced1"
        android:layout_width="185dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todoadvanced1" />

    <ImageView
        android:id="@+id/imageViewAdvanced2"
        android:layout_width="180dp"
        android:layout_height="135dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todoadvanced02" />

    <ImageView
        android:id="@+id/imageViewAdvanced3"
        android:layout_width="186dp"
        android:layout_height="121dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/todoadvanced03" />

    <EditText
        android:id="@+id/editImage01"
        android:layout_width="191dp"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editImage03"
        android:layout_width="183dp"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684"
        tools:ignore="LabelFor,MissingConstraints"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editImage02"
        android:layout_width="186dp"
        android:layout_height="46dp"
        android:gravity="center_horizontal"
        android:inputType="textPersonName|textCapWords"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="LabelFor,MissingConstraints"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonAdvanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitAdvanced"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        tools:ignore="MissingConstraints,OnClick"
        android:onClick="advancedLevel"/>

    <Button
        android:id="@+id/buttonAdvancedNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextAdvanced"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922"
        tools:ignore="DuplicateIds,MissingConstraints,OnClick"
        android:visibility="gone"
        android:onClick="advancedLevelNext"/>

    <TextView
        android:id="@+id/textViewAdvanced01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewAdvanced02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textViewAdvanced03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />
</androidx.constraintlayout.widget.ConstraintLayout>